--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
   height: 100%;
   z-index: 2;
   background: rgba(0, 0, 0, 1); /* Superposition sombre pour cacher la vidéo */
+  opacity: 1
   clip-path: circle(0% at 100% 100%); /* Vidéo complètement cachée au départ */
   pointer-events: none;
   transition: clip-path 0.3s ease-out;
