--- a/style.css
+++ b/style.css
@@ -36,10 +36,9 @@ body {
   width: 100%;
   height: 100%;
   z-index: 2;
-  background: rgba(0, 0, 0, 1); /* Superposition sombre pour cacher la vidéo */
-  opacity: 1
-  clip-path: circle(0% at 100% 100%); /* Vidéo complètement cachée au départ */
+  background: rgba(0, 0, 0, 1); /* Masque complet au départ */
   pointer-events: none;
+  clip-path: circle(0% at 50% 50%); /* Vidéo masquée au départ */
   transition: clip-path 0.3s ease-out;
 }
 
@@ -60,5 +59,7 @@ body {
   );
   z-index: 3;
 }
-
+body:hover .overlay {
+  clip-path: circle(10% at var(--x) var(--y)); /* Révélation de la vidéo autour de la souris */
+}
 
