--- a/style.css
+++ b/style.css
@@ -30,6 +30,19 @@ body {
 }
 
 
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  background: rgba(0, 0, 0, 1); /* Couche noire pour masquer totalement la vidéo */
+  pointer-events: none;
+  clip-path: circle(0% at 50% 50%); /* Masquer toute la vidéo au départ */
+  transition: clip-path 0.3s ease-out;
+}
+
 .light {
   position: fixed;
   top: 0;
@@ -48,6 +61,6 @@ body {
   z-index: 3;
 }
 body:hover .overlay {
-  clip-path: circle(5% at var(--x) var(--y)); /* Révélation de la vidéo autour de la souris */
+  clip-path: circle(100% at var(--x) var(--y)); /* Révélation de la vidéo autour de la souris */
 }
 
