--- a/style.css
+++ b/style.css
@@ -37,9 +37,9 @@ body {
   width: 100%;
   height: 100%;
   z-index: 2;
-  background: rgba(0, 0, 0, 1); /* Couche noire pour masquer totalement la vidéo */
+  background: rgba(0, 0, 0, 1); 
   pointer-events: none;
-  clip-path: circle(0% at 50% 50%); /* Masquer toute la vidéo au départ */
+  clip-path: circle(0% at 100% 100%); 
   transition: clip-path 0.3s ease-out;
 }
 
@@ -60,7 +60,3 @@ body {
   );
   z-index: 3;
 }
-body:hover .overlay {
-  clip-path: circle(100% at var(--x) var(--y)); /* Révélation de la vidéo autour de la souris */
-}
-
