--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
   height: 100%;
   z-index: 2;
   background: rgba(0, 0, 0, 1); 
+  opacity: 1
   pointer-events: none;
   clip-path: circle(0% at 100% 100%); 
   transition: clip-path 0.3s ease-out;
