--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 * {
   margin: 0;
   padding: 0;
@@ -14,31 +15,56 @@ body {
   color: #fff;
   position: relative;
   overflow: hidden;
+  opacity: 1
 }
 
 .video-container {
   position: relative;
   width: 40vw; /* Largeur de la vidéo */
   height: auto;
+  opacity: 1
 }
 
 .video {
   width: 100%;
   height: auto;
-  position: relative;
   z-index: 1;
+  position: relative;
+  opacity: 1
 }
 
-/* Masque de la vidéo */
-.video-mask {
+
+.overlay {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 1); /* Cache noir complet */
-  pointer-events: none; /* Empêche l'interaction avec le masque */
-  clip-path: circle(0% at 50% 50%); /* Cache totalement la vidéo */
-  transition: clip-path 0.2s ease-out;
+  z-index: 2;
+  background: rgba(0, 0, 0, 1); 
+  opacity: 1;
+  pointer-events: none;
+  clip-path: circle(0% at var(--x, 50%) var(--y, 50%)); /* Small circle around mouse */
+  transition: clip-path 0.3s ease-out;
+}
+
+
+.light {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  pointer-events: none;
+
+  /* Radial gradient pour l'effet de lumière */
+  background: radial-gradient(
+    circle at var(--x, 15%) var(--y, 15%),
+    rgba(255, 255, 255, 0.5) 0%,  /* Centre lumineux visible */
+    rgba(255, 255, 255, 0.3) 3%, /* Transition lumineuse plus douce */
+    rgba(0, 0, 0, 0.8) 5%        /* Ombre subtile */
+  );
   z-index: 3;
 }
+
+
