--- a/style.css
+++ b/style.css
@@ -1,24 +1,39 @@
-
 * {
-  margin: 0;
   padding: 0;
+  margin: 0;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Poppins", sans-serif;
+  cursor: none;
 }
-
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background: #000;
-  color: #fff;
-  position: relative;
-  overflow: hidden;
-  opacity: 1
+p {
+  font-size: 1em;
+  text-align: justify;
+  line-height: 2em;
+  padding: 0 2em;
+  margin-bottom: 1em;
 }
-
-.video-container {
+#flashlight {
+  --Xpos: 50vw;
+  --Ypos: 50vh;
+}
+#flashlight:before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: radial-gradient(
+    circle 9em at var(--Xpos) var(--Ypos),
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 1)
+  );
+}
+@media screen and (min-width: 800px) {
+  body {
+    font-size: 24px;
+  }
+}
+video-container {
   position: relative;
   width: 40vw; /* Largeur de la vidéo */
   height: auto;
@@ -32,39 +47,3 @@ body {
   position: relative;
   opacity: 1
 }
-
-
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 2;
-  background: rgba(0, 0, 0, 1); 
-  opacity: 1;
-  pointer-events: none;
-  clip-path: circle(0% at var(--x, 50%) var(--y, 50%)); /* Small circle around mouse */
-  transition: clip-path 0.3s ease-out;
-}
-
-
-.light {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  pointer-events: none;
-
-  /* Radial gradient pour l'effet de lumière */
-  background: radial-gradient(
-    circle at var(--x, 15%) var(--y, 15%),
-    rgba(255, 255, 255, 0.5) 0%,  /* Centre lumineux visible */
-    rgba(255, 255, 255, 0.3) 3%, /* Transition lumineuse plus douce */
-    rgba(0, 0, 0, 0.8) 5%        /* Ombre subtile */
-  );
-  z-index: 3;
-}
-
-
